[project]

name = "cnt-collector-node"
dynamic = ["version", "dependencies"]
description = "Orcfax cnt collector node - Orcfax Node"
readme = "README.md"

requires-python = ">=3.9"

license = {file = "LICENSE.txt"}

authors = [
  {name = "George Orcfax", email = "george@orcfax.io" },
  {name = "R. Spencer", email = "ross@orcfax.io" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}

[project.urls]
"Homepage" = "https://orcfax.io"
"Source" = "https://github.com/orcfax/cnt-collector-node"

[project.scripts]
cnt-collector-node = "cnt_collector_node.indexer:main"
cnt-indexer = "cnt_collector_node.indexer:main"
cnt-submit = "cnt_collector_node.submitter:main"

[build-system]
requires = ["setuptools>=67.8.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
